syntax= "proto3";

option csharp_namespace = "gRPC.Protos";

package calculator;

message Number {
	int32 num = 1;
}

message ManyTimeResponse {
	string result = 1;
}

service CalculatorService {
	rpc PrimeNumber (Number) returns (stream ManyTimeResponse){}

	// Client streaming
	rpc ComputeAverage(stream Number) returns (Number){}
}